[project]
name = "pytune_pdf_renderer"
version = "0.1.0"
description = "Minimal PDF rendering microservice for PyTune"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "playwright==1.58.0",
    "pydantic>=2.8.0"
]

[tool.uv]
package = false